# dbus_hooks

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: example.rs
src/: lib.rs  service.rs
