[package]
name = "dbus_hooks"
version = "0.2.2"
authors = ["hellsworth <heather@thunderbird.net>"]
edition = "2021"
rust-version = "1.58"
description = """
A Rust implementation of the KDE/freedesktop StatusNotifierItem specification
Forked from https://github.com/iovxw/ksni
"""
repository = "https://github.com/thunderbird/dbus-hooks"
keywords = ["systray", "linux", "gui"]
categories = ["api-bindings"]
license = "Unlicense"

[dependencies]
dbus = { version = "0.9" }
dbus-tree = { version = "0.9" }
thiserror = "1.0"

[build-dependencies]
dbus-codegen = { version = "0.11" }
